[backend] Improve code and SentinelOne for Windows OK